remaded some parts

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/index.css"/>
   </head>
+
   <body>
 
     <header class="header">
@@ -123,6 +124,78 @@
         </div>
       </div>
     </section>
+
+    <section class="microsoft">
+      <div class="microsoft__container">
+          <div class="microsoft__row flex">
+              <div class="microsoft__img col-3">
+                  <img src="./images/microsoft.png" alt="">
+              </div>
+              <div class="microsoft__img col-3">
+                  <img src="./images/microsoft.png" alt="">
+              </div>
+              <div class="microsoft__img col-3">
+                  <img src="./images/microsoft.png" alt="">
+              </div>
+              <div class="microsoft__img col-3">
+                  <img src="./images/microsoft.png" alt="">
+              </div>
+
+          </div>
+      </div>
+  </section>
+
+  <section class="form">
+      <div class="form__container text__center">
+          <div class="form__titles">
+              <h2 class="form__title">Хотите веб-сайт?</h2>
+              <h6 class="form__description">
+                  Lorem Ipsum - это текст-"рыба",
+                  часто используемый в печати и вэб-дизайне.
+                  Lorem Ipsum является стандартной "рыбой"
+                  для текстов на латинице с начала XVI века.
+              </h6>
+          </div>
+          <div class="form__items">
+              <div class="form__row flex">
+                  <div class="form__item1 col-2">
+                      <input type="text" placeholder="Ваше имя" class="form__input" id="input">
+                  </div>
+                  <div class="form__item2 col-2">
+                      <input type="text" placeholder="Ваш e-mail" class="form__input" id="input">
+                  </div>
+              </div>
+          </div>
+          <div class="form__row">
+              <input type="text" placeholder="Сообщение" class="form__input2" id="input">
+          </div>
+          <div class="form__btn">
+              <button class="form__btn">ОТПРАВИТЬ</button>
+          </div>
+      </div>
+
+  </section>
+
+  <footer class="footer">
+
+      <div class="footer__container">
+
+          <div class="footer__row flex">
+
+              <div class="footer__col col-2">
+                  <h5 class="footer__title">Иванов Иван</h5>
+                  <h5 class="footer__subtitle">(с) 2018. Все права защищены.</h5>
+              </div>
+
+              <div class="footer__col col-2">
+                  <img class="footer__img" src="./images/vk.svg" alt="">
+              </div>
+
+          </div>
+      </div>
+
+  </footer>
     
   </body>
+  
 </html>
